--- a/style.css
+++ b/style.css
@@ -62,9 +62,13 @@ body {
 }
 .navbar{
   display: inline;
+  text-align: justify;
 }
 
 #search{
   background-color: white;
   color: palevioletred;
+  margin: 10px;
+  padding: 10px;
+  width: 30%;
 }
