--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
 
 #search{
   background-color: white;
-  color: palevioletred;
+  color: black;
   margin: 10px;
   padding: 10px;
   width: 30%;
